[gd_scene load_steps=12 format=2]

[ext_resource path="res://layer/menu_online/Network_setup.gd" type="Script" id=1]
[ext_resource path="res://font/MatchupPro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.054902, 0.0352941, 0.145098, 0.509804 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 4

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0745098, 0.0392157, 0.176471, 0.545098 )
corner_radius_top_left = 30
corner_radius_top_right = 30

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[node name="Network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background_panel" type="Panel" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 496.0
margin_bottom = 272.0
custom_styles/panel = SubResource( 1 )

[node name="Create_server" type="Button" parent="background_panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 32.0
margin_top = 192.0
margin_right = 128.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 2 )
text = "Create Serve"

[node name="Join_server" type="Button" parent="background_panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -112.0
margin_top = 192.0
margin_right = -16.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 3 )
text = "Join Serve"

[node name="img_b" type="Button" parent="background_panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -119.0
margin_top = 96.0
margin_right = -7.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 3 )
text = "Escolher imagem"

[node name="username" type="LineEdit" parent="background_panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -86.0
margin_top = 48.0
margin_right = 84.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 4 )
align = 1
max_length = 16
placeholder_text = "digite seu nome  "

[node name="server_ip_address" type="LineEdit" parent="background_panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -76.0
margin_top = 144.0
margin_right = 74.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 5 )
text = "192.168.1.210"
align = 1
max_length = 16
placeholder_text = "digite o endereco de ip"

[node name="Sprite" type="Sprite" parent="background_panel"]
position = Vector2( 324, 113 )
scale = Vector2( 0.3125, 0.3125 )
texture = ExtResource( 3 )

[node name="FileDialog" type="FileDialog" parent="background_panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -208.0
margin_top = 16.0
margin_right = 208.0
margin_bottom = 336.0
rect_min_size = Vector2( 150, 52.5 )
rect_scale = Vector2( 0.5, 0.5 )
window_title = "Open a File"
resizable = true
dialog_text = "importe sua imagem"
dialog_hide_on_ok = true
dialog_autowrap = true
mode = 0
access = 2
__meta__ = {
"_editor_description_": ""
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = 208.0
margin_top = 272.0
margin_right = 304.0
margin_bottom = 288.0
custom_styles/panel = SubResource( 7 )

[node name="device_ip_address" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -16.0
margin_right = 48.0
custom_fonts/font = SubResource( 6 )
align = 1

[node name="strat_game" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -68.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 8 )
text = "START"

[connection signal="pressed" from="background_panel/Create_server" to="." method="_on_Create_server_pressed"]
[connection signal="pressed" from="background_panel/Join_server" to="." method="_on_Join_server_pressed"]
[connection signal="pressed" from="background_panel/img_b" to="." method="_on_img_b_pressed"]
[connection signal="file_selected" from="background_panel/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="CanvasLayer/strat_game" to="." method="_on_strat_game_pressed"]
